# rs-ucan

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  deny.toml  flake.nix
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: coverage.yaml  coverage.yml  nix_build.yml  release.yaml  tests_and_checks.yml
.zed/: settings.json
proptest-regressions/delegation/policy/selector/: filter.txt
src/: delegation.rs  invocation.rs  receipt.rs
src/ability/: pipe.rs
src/ability/ucan/: batch.rs
src/crypto/: nonce.rs
src/crypto/signature/: envelope.rs
src/crypto/varsig/header/: eddsa.rs  es256.rs  es256k.rs  es512.rs  rs256.rs  rs512.rs  traits.rs
src/delegation/: agent.rs  payload.rs  store.rs
src/delegation/store/: memory.rs  traits.rs
src/invocation/: agent.rs  payload.rs
src/invocation/store/: memory.rs  traits.rs
src/ipld/: cid.rs
src/receipt/: payload.rs
src/receipt/store/: memory.rs  traits.rs
ucan/: Cargo.toml  README.md
ucan-authority/: Cargo.toml
ucan-authority/src/: ed25519.rs  lib.rs
ucan-authority/src/ed25519/: web.rs
ucan-authority/tests/: delegation.rs  delegation_conformance.rs  invocation.rs  subject.rs
ucan-credentials/: Cargo.toml
ucan-credentials/src/: ed25519.rs  lib.rs
ucan-credentials/src/ed25519/: web.rs
ucan-credentials/tests/: delegation.rs  delegation_conformance.rs  invocation.rs  subject.rs
ucan-key-support/: Cargo.toml
ucan/src/: builder.rs  codec.rs  crypto.rs  delegation.rs  did.rs  envelope.rs  invocation.rs  ipld.rs  issuer.rs  lib.rs  principal.rs  sealed.rs
ucan/src/crypto/: nonce.rs  web_crypto.rs
ucan/src/delegation/: builder.rs  store.rs  subject.rs
ucan/src/delegation/policy/: predicate.rs
ucan/src/delegation/policy/selector/: filter.rs  select.rs
ucan/src/did/: ed25519.rs
ucan/src/invocation/: builder.rs
ucan/src/principal/: ed25519.rs  issuer.rs
ucan/src/time/: error.rs  timestamp.rs
ucan/tests/: delegation_conformance.rs
ucan_core/: Cargo.toml
ucan_core/proptest-regressions/delegation/policy/selector/: filter.txt  select.txt
ucan_core/src/: collection.rs  crypto.rs  delegation.rs  did.rs  envelope.rs  invocation.rs  ipld.rs  lib.rs  number.rs  promise.rs  sealed.rs
ucan_core/src/crypto/: nonce.rs  signed.rs
ucan_core/src/delegation/: builder.rs  policy.rs  subject.rs
ucan_core/src/delegation/policy/: predicate.rs  selector.rs
ucan_core/src/delegation/policy/selector/: filter.rs  select.rs  selectable.rs
ucan_core/src/invocation/: builder.rs
ucan_core/src/time/: error.rs  timestamp.rs
ucan_core/tests/: delegation_conformance.rs  policy_conformance.rs
ucan_wasm/: Cargo.toml  package.json
ucan_wasm/e2e/: document.spec.ts  keyhive.spec.ts  signed.spec.ts  signer.spec.ts
ucan_wasm/e2e/server/: index.html
varsig/: Cargo.toml  README.md
varsig/src/: algorithm.rs  codec.rs  curve.rs  encoding.rs  envelope.rs  hash.rs  header.rs  lib.rs  signature.rs  signer.rs  verify.rs
varsig/src/algorithm/: any.rs  ecdsa.rs  eddsa.rs  rsa.rs  web_crypto.rs
varsig/src/algorithm/eddsa/: web.rs
varsig/src/header/: traits.rs
varsig/src/signature/: ecdsa.rs  eddsa.rs  error.rs  rsa.rs  signer.rs  verifier.rs  web_crypto.rs
varsig/src/signature/eddsa/: native.rs  web.rs
