[workspace]
resolver = "2"
members = [
    "ucan_core",
    "ucan_wasm"
]

[workspace.package]
authors = [
    "Brooklyn Zelenka <hello@brooklynzelenka.com>",
]

edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ucan-wg/rs-ucan"
rust-version = "1.85.0"
version = "0.1.0"

[workspace.dependencies]
arbitrary = { version = "1.4", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
futures = "0.3.31"
getrandom = "0.3.2"
ipld-core = { version = "0.4.2", features = ["arb", "serde"] }
nom = "8.0"
nom-unicode = "0.4"
nonempty = { version = "0.10.0", features = ["serialize"] }
pretty_assertions = "1.4"
proptest-arbitrary-interop = "0.1.0"
proptest = "1.6"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive", "rc"] }
signature = "2.2"
test-log = "0.2.17"
testresult = "0.4.1"
thiserror = "1.0"
tracing = "0.1.41"
