[package]
name = "ucan"
readme = "README.md"
keywords = ["auth", "capability", "rpc"]
categories = ["security", "web-programming"]
description = "UCAN certificate capability tokens"
version = "0.5.0"
authors = [
    "Brooklyn Zelenka <hello@brooklynzelenka.com>",
    "Irakli Gozalishvili <contact@gozala.io>",
    "Christopher Joel <0xcda7a@gmail.com>"
]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
async-signature = { version = "0.5.1", optional = true }
base58 = { version = "0.2.0", optional = true }
ed25519-dalek = { version = "2.2", optional = true }
futures = { workspace = true }
getrandom = { workspace = true, optional = true }
ipld-core.workspace = true
leb128 = "0.2.5"
nom-unicode.workspace = true
nom.workspace = true
nonempty.workspace = true
proptest = { workspace = true, optional = true }
proptest-arbitrary-interop = { workspace = true, optional = true }
serde-value = "0.7"
serde.workspace = true
serde_bytes = "0.11.19"
serde_ipld_dagcbor.workspace = true
sha2 = "0.10.9"
signature.workspace = true
thiserror.workspace = true
tracing.workspace = true
varsig = { path = "../varsig" }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2.9", features = ["js"], optional = true }
# getrandom 0.3 is pulled in transitively by proptest → rand 0.9.
# It needs the wasm_js feature to compile for wasm32-unknown-unknown.
getrandom_0_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "CryptoKeyPair",
], optional = true }
web-time = "1.1"

[dev-dependencies]
arbitrary = { workspace = true, optional = false }
base64 = "0.22.1"
pretty_assertions.workspace = true
serde_json = "1.0"
serde_ipld_dagjson.workspace = true
test-log.workspace = true
testresult.workspace = true
tokio = { version = "1", features = ["rt", "macros"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["ed25519"]
ed25519 = [
    "dep:ed25519-dalek",
    "dep:getrandom",
    "dep:base58",
    "dep:async-signature",
    "varsig/edwards25519",
    "varsig/sha2_512",
]
wasm_ed25519 = [
    "ed25519",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
test_utils = ["arb", "property_test"]
arb = ["dep:arbitrary"]
property_test = ["dep:proptest", "dep:proptest-arbitrary-interop"]

[lints]
workspace = true
