[package]
name = "ucan"
readme = "README.md"
keywords = ["auth", "capability", "rpc"]
categories = ["security", "web-programming"]
description = "UCAN certificate capability tokens"
version = "0.5.0"
authors = [
    "Brooklyn Zelenka <hello@brooklynzelenka.com>",
    "Irakli Gozalishvili <contact@gozala.io>",
    "Christopher Joel <0xcda7a@gmail.com>"
]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
futures = { workspace = true }
getrandom.workspace = true
ipld-core.workspace = true
leb128 = "0.2.5"
nom-unicode.workspace = true
nom.workspace = true
nonempty.workspace = true
proptest = { workspace = true, optional = true }
proptest-arbitrary-interop = { workspace = true, optional = true }
serde-value = "0.7"
serde.workspace = true
serde_bytes = "0.11.19"
serde_ipld_dagcbor.workspace = true
sha2 = "0.10.9"
signature.workspace = true
thiserror.workspace = true
tracing.workspace = true
varsig = { path = "../varsig" }
web-time = "1.1"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
# getrandom 0.3 is pulled in transitively by proptest → rand 0.9.
# It needs the wasm_js feature to compile for wasm32-unknown-unknown.
getrandom_0_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
arbitrary = { workspace = true, optional = false }
pretty_assertions.workspace = true
serde_json = "1.0"
serde_ipld_dagjson.workspace = true
test-log.workspace = true
testresult.workspace = true

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
test_utils = ["arb", "property_test"]
arb = ["dep:arbitrary"]
property_test = ["dep:proptest", "dep:proptest-arbitrary-interop"]

[lints]
workspace = true
