[package]
name = "ucan_core"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
dupe.workspace = true
getrandom.workspace = true
ipld-core.workspace = true
nom-unicode.workspace = true
nom.workspace = true
nonempty.workspace = true
serde.workspace = true
signature.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-log.workspace = true
testresult.workspace = true

[features]
test_utils = ["dep:arbitrary"]
