[package]
name = "ucan_core"
readme = "README.md"
keywords = ["auth", "capability", "rpc"]
categories = ["security", "web-programming"]
description = "Core UCAN tokens"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
getrandom.workspace = true
ipld-core.workspace = true
nom-unicode.workspace = true
nom.workspace = true
nonempty.workspace = true
proptest = { workspace = true, optional = true }
proptest-arbitrary-interop = { workspace = true, optional = true }
serde.workspace = true
signature.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-log.workspace = true
testresult.workspace = true

[features]
test_utils = ["arb", "property_test"]
arb = ["dep:arbitrary"]
property_test = ["dep:proptest", "dep:proptest-arbitrary-interop"]
