[package]
name = "varsig"
description = "IPLD signature metadata"

readme = "README.md"
keywords = ["signature", "metadata", "ipld"]
categories = ["cryptography"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ipld-core.workspace = true
signature.workspace = true
thiserror.workspace = true

bytes = { version =  "1.10", optional = true }
ipld-dagpb = { version = "0.2.1", optional = true }
serde_ipld_dagcbor = { version = "0.6.3", optional = true }
serde_ipld_dagjson = { version = "0.2.0", optional = true }

[features]
default = ["dag_cbor"]

identity = []
jwt = []
eip191 = []

dag_cbor = ["dep:serde_ipld_dagcbor"]
dag_json = ["dep:serde_ipld_dagjson"]
dag_pb = ["dep:ipld-dagpb", "dep:bytes"]
